--- a/MAIN_micros/TRABAJO_MICROS_LUCES/TRABAJO_MICROS_LUCES.ioc
+++ b/MAIN_micros/TRABAJO_MICROS_LUCES/TRABAJO_MICROS_LUCES.ioc
@@ -6,17 +6,20 @@ Mcu.Family=STM32F4
 Mcu.IP0=NVIC
 Mcu.IP1=RCC
 Mcu.IP2=SYS
-Mcu.IP3=USART6
-Mcu.IPNb=4
+Mcu.IP3=TIM1
+Mcu.IP4=USART6
+Mcu.IPNb=5
 Mcu.Name=STM32F411V(C-E)Tx
 Mcu.Package=LQFP100
-Mcu.Pin0=PD12
-Mcu.Pin1=PD13
-Mcu.Pin2=PD14
-Mcu.Pin3=PC6
-Mcu.Pin4=PC7
-Mcu.Pin5=VP_SYS_VS_Systick
-Mcu.PinsNb=6
+Mcu.Pin0=PE9
+Mcu.Pin1=PD12
+Mcu.Pin2=PD13
+Mcu.Pin3=PD14
+Mcu.Pin4=PC6
+Mcu.Pin5=PC7
+Mcu.Pin6=VP_SYS_VS_Systick
+Mcu.Pin7=VP_TIM1_VS_ClockSourceINT
+Mcu.PinsNb=8
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411VETx
@@ -44,6 +47,8 @@ PD13.Locked=true
 PD13.Signal=GPIO_Output
 PD14.Locked=true
 PD14.Signal=GPIO_Output
+PE9.Locked=true
+PE9.Signal=S_TIM1_CH1
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -72,7 +77,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_I2S2_Init-I2S2-false-HAL-true,5-MX_I2S3_Init-I2S3-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_USB_HOST_Init-USB_HOST-false-HAL-false
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART6_UART_Init-USART6-false-HAL-true,4-MX_TIM1_Init-TIM1-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=96000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -89,7 +94,8 @@ RCC.HCLKFreq_Value=96000000
 RCC.HSE_VALUE=8000000
 RCC.HSI_VALUE=16000000
 RCC.I2SClocksFreq_Value=320000000
-RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLI2SM,PLLI2SN,PLLM,PLLP,PLLQ,PLLQCLKFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOInputMFreq_Value,VCOOutputFreq_Value,VcooutputI2S
+RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSE_VALUE,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLI2SM,PLLI2SN,PLLM,PLLP,PLLQ,PLLQCLKFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOInputMFreq_Value,VCOOutputFreq_Value,VcooutputI2S
+RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
 RCC.MCO2PinFreq_Value=96000000
 RCC.PLLCLKFreq_Value=96000000
@@ -108,11 +114,20 @@ RCC.VCOInputFreq_Value=2000000
 RCC.VCOInputMFreq_Value=3200000
 RCC.VCOOutputFreq_Value=384000000
 RCC.VcooutputI2S=320000000
+SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1
+SH.S_TIM1_CH1.ConfNb=1
+TIM1.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM1.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period,Pulse-PWM Generation1 CH1
+TIM1.Period=2000
+TIM1.Prescaler=160
+TIM1.Pulse-PWM\ Generation1\ CH1=50
 USART6.BaudRate=9600
 USART6.IPParameters=VirtualMode,BaudRate
 USART6.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM1_VS_ClockSourceINT.Mode=Internal
+VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
 board=STM32F411E-DISCO
 boardIOC=true
 isbadioc=false
