--- a/MAIN_micros/TRABAJO_MICROS_LUCES/TRABAJO_MICROS_LUCES.ioc
+++ b/MAIN_micros/TRABAJO_MICROS_LUCES/TRABAJO_MICROS_LUCES.ioc
@@ -1,30 +1,43 @@
 #MicroXplorer Configuration settings - do not modify
+ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_1
+ADC1.ContinuousConvMode=ENABLE
+ADC1.IPParameters=master,NbrOfConversionFlag,Channel-0\#ChannelRegularConversion,Resolution,ScanConvMode,ContinuousConvMode,SamplingTime-0\#ChannelRegularConversion
+ADC1.NbrOfConversionFlag=1
+ADC1.Resolution=ADC_RESOLUTION_12B
+ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_480CYCLES
+ADC1.ScanConvMode=DISABLE
+ADC1.master=1
 File.Version=6
 KeepUserPlacement=false
 Mcu.CPN=STM32F411VET6
 Mcu.Family=STM32F4
-Mcu.IP0=NVIC
-Mcu.IP1=RCC
-Mcu.IP2=SYS
-Mcu.IP3=TIM1
-Mcu.IP4=USART6
-Mcu.IPNb=5
+Mcu.IP0=ADC1
+Mcu.IP1=NVIC
+Mcu.IP2=RCC
+Mcu.IP3=SYS
+Mcu.IP4=TIM1
+Mcu.IP5=USART6
+Mcu.IPNb=6
 Mcu.Name=STM32F411V(C-E)Tx
 Mcu.Package=LQFP100
-Mcu.Pin0=PE9
-Mcu.Pin1=PD12
-Mcu.Pin2=PD13
-Mcu.Pin3=PD14
-Mcu.Pin4=PC6
-Mcu.Pin5=PC7
-Mcu.Pin6=VP_SYS_VS_Systick
-Mcu.Pin7=VP_TIM1_VS_ClockSourceINT
-Mcu.PinsNb=8
+Mcu.Pin0=PA1
+Mcu.Pin1=PE9
+Mcu.Pin10=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin2=PD9
+Mcu.Pin3=PD10
+Mcu.Pin4=PD12
+Mcu.Pin5=PD13
+Mcu.Pin6=PD14
+Mcu.Pin7=PC6
+Mcu.Pin8=PC7
+Mcu.Pin9=VP_SYS_VS_Systick
+Mcu.PinsNb=11
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411VETx
 MxCube.Version=6.6.1
 MxDb.Version=DB.6.0.60
+NVIC.ADC_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.ForceEnableDMAVector=true
@@ -37,16 +50,21 @@ NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:true\:true\:false
 NVIC.USART6_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
+PA1.Signal=ADCx_IN1
 PC6.Mode=Asynchronous
 PC6.Signal=USART6_TX
 PC7.Mode=Asynchronous
 PC7.Signal=USART6_RX
+PD10.Locked=true
+PD10.Signal=GPIO_Input
 PD12.Locked=true
 PD12.Signal=GPIO_Output
 PD13.Locked=true
 PD13.Signal=GPIO_Output
 PD14.Locked=true
 PD14.Signal=GPIO_Output
+PD9.Locked=true
+PD9.Signal=GPIO_Output
 PE9.Locked=true
 PE9.Signal=S_TIM1_CH1
 PinOutPanel.RotationAngle=0
@@ -77,7 +95,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART6_UART_Init-USART6-false-HAL-true,4-MX_TIM1_Init-TIM1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART6_UART_Init-USART6-false-HAL-true,4-MX_TIM1_Init-TIM1-false-HAL-true,5-MX_ADC1_Init-ADC1-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=96000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -114,6 +132,8 @@ RCC.VCOInputFreq_Value=2000000
 RCC.VCOInputMFreq_Value=3200000
 RCC.VCOOutputFreq_Value=384000000
 RCC.VcooutputI2S=320000000
+SH.ADCx_IN1.0=ADC1_IN1,IN1
+SH.ADCx_IN1.ConfNb=1
 SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1
 SH.S_TIM1_CH1.ConfNb=1
 TIM1.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
