Uso del boton PA0

--- a/MAIN_micros/TRABAJO_MICROS_LUCES/TRABAJO_MICROS_LUCES.ioc
+++ b/MAIN_micros/TRABAJO_MICROS_LUCES/TRABAJO_MICROS_LUCES.ioc
@@ -20,18 +20,20 @@ Mcu.IP5=USART6
 Mcu.IPNb=6
 Mcu.Name=STM32F411V(C-E)Tx
 Mcu.Package=LQFP100
-Mcu.Pin0=PA1
-Mcu.Pin1=PE9
-Mcu.Pin10=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin2=PD9
-Mcu.Pin3=PD10
-Mcu.Pin4=PD12
-Mcu.Pin5=PD13
-Mcu.Pin6=PD14
-Mcu.Pin7=PC6
-Mcu.Pin8=PC7
-Mcu.Pin9=VP_SYS_VS_Systick
-Mcu.PinsNb=11
+Mcu.Pin0=PA0-WKUP
+Mcu.Pin1=PA1
+Mcu.Pin10=PC7
+Mcu.Pin11=VP_SYS_VS_Systick
+Mcu.Pin12=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin2=PE9
+Mcu.Pin3=PE10
+Mcu.Pin4=PD9
+Mcu.Pin5=PD10
+Mcu.Pin6=PD12
+Mcu.Pin7=PD13
+Mcu.Pin8=PD14
+Mcu.Pin9=PC6
+Mcu.PinsNb=13
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411VETx
@@ -40,6 +42,7 @@ MxDb.Version=DB.6.0.60
 NVIC.ADC_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
+NVIC.EXTI0_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
@@ -50,6 +53,8 @@ NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:true\:true\:false
 NVIC.USART6_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
+PA0-WKUP.Locked=true
+PA0-WKUP.Signal=GPXTI0
 PA1.Signal=ADCx_IN1
 PC6.Mode=Asynchronous
 PC6.Signal=USART6_TX
@@ -65,6 +70,8 @@ PD14.Locked=true
 PD14.Signal=GPIO_Output
 PD9.Locked=true
 PD9.Signal=GPIO_Output
+PE10.Locked=true
+PE10.Signal=GPIO_Output
 PE9.Locked=true
 PE9.Signal=S_TIM1_CH1
 PinOutPanel.RotationAngle=0
@@ -134,6 +141,8 @@ RCC.VCOOutputFreq_Value=384000000
 RCC.VcooutputI2S=320000000
 SH.ADCx_IN1.0=ADC1_IN1,IN1
 SH.ADCx_IN1.ConfNb=1
+SH.GPXTI0.0=GPIO_EXTI0
+SH.GPXTI0.ConfNb=1
 SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1
 SH.S_TIM1_CH1.ConfNb=1
 TIM1.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
